# fullstack-ai-app-template

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  turbo.json  version.py
.github/workflows/: ci.yml
app/backend/: .env.example  pyproject.toml  run.py
app/backend/alembic/: env.py
app/backend/alembic/versions/: 20251002_1639_b88f5ff6920b_create_users_table.py  20251004_1739_ed3cb7e39dc2_add_chat_tables.py
app/backend/src/: __init__.py  main.py  version.py
app/backend/src/api/: auth.py  chat.py
app/backend/src/core/: config.py  dependencies.py  lifespan.py  local_logging.py  security.py
app/backend/src/core/cache/: client.py  decorator.py
app/backend/src/core/logging_config/: local.py
app/backend/src/db/: session.py
app/backend/src/db/models/: conversation.py  message.py  user.py
app/backend/src/middleware/: user_state.py
app/backend/src/schemas/: __init__.py  auth.py  chat.py  user.py
app/backend/src/services/: chat.py
app/backend/src/services/ai/: __init__.py  anthropic_service.py  openai_service.py
app/backend/tests/: .env.test  conftest.py  test_ai_services.py  test_auth.py  test_cache_decorator.py  test_chat.py  test_rate_limiting.py
app/frontend/: middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
app/frontend/__tests__/store/: auth.test.ts  chat.test.ts
app/frontend/components/chat/: ChatInterface.tsx  CodeBlock.tsx  ConversationItem.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  (+1 more)
app/frontend/lib/: api-client.ts
app/frontend/store/: auth.ts  chat.ts
app/frontend/types/: api.ts  openapi.json
infrastructure/: docker-compose.yml
infrastructure/docker/: Dockerfile.backend
scripts/: apply_variant.py  configure_template.py  generate-types.sh
(+11 files in other folders)
